--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disk-cleanup",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This project offers a set of functions to perform disk cleanup operations in Node.js, including backup creation, restoration, and removal of files and directories.",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,14 @@
     "type": "git",
     "url": "git+https://github.com/Surajchandraa/disk-cleanup.git"
   },
-  "keywords": ["disk-cleanup",
-  "file-management",
-  "node.js",
-  "file-size-filter",
-  "file-deletion",
-  "utility-functions"],
+  "keywords": [
+    "disk-cleanup",
+    "file-management",
+    "node.js",
+    "file-size-filter",
+    "file-deletion",
+    "utility-functions"
+  ],
   "author": "Suraj chandra",
   "license": "MIT",
   "bugs": {
